Switching over to a more friendly API to get the CPU usage.